--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     </main>
         <footer class="rightsReserved">
-            Todos los derechos reservados © 2021 by Blancer
+            Todos los derechos reservados © 2021
         </footer>
 
         <!------------------------------------------------------------------------------------------------>
