--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fico | Bar</title>
     <link rel="shortcut icon" href="images/logofico.ico" />
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font.css">
     <!-- ↓↓↓↓ FONT FOR MENU AND SUBTITLE ↓↓↓↓ -->
     <link href="https://fonts.googleapis.com/css2?family=Glory&display=swap" rel="stylesheet">
     <!-- ↓↓↓↓ LINK FOR CAROUSEL ↓↓↓↓ -->
