Nuevas características y html 404

--- a/pages/menuBebidas.html
+++ b/pages/menuBebidas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,6 @@
             <li class="menu-item"><a href="menuAlcohol.html">Alcohol</a></li>
                 </ol>
             </li>
-            <li class="menu-item"><a href="encuesta.html">Encuesta</a></li>
             <li class="menu-item"><a href="contacto.html">Contactános</a></li>
             </ol>
         </nav>
