Añadi nuevas imagenes y botones a las secciones.

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
           </div>
           <div class="carousel-inner">
           <div class="carousel-item active">
-              <img src="images/MonsterBurguer.png" height="500px" class="carouselImage" alt="...">
+              <img src="images/menuNos.png" height="500px" class="carouselImage" alt="...">
           </div>
           <div class="carousel-item">
-              <img src="images/MonsterBurguer.png" height="500px" class="carouselImage" alt="...">
+              <img src="images/labirraNos.png" height="500px" class="carouselImage" alt="...">
           </div>
           <div class="carousel-item">
-              <img src="images/MonsterBurguer.png" height="500px" class="carouselImage" alt="...">
+              <img src="images/hamburguesaNos.png" height="500px" class="carouselImage" alt="...">
           </div>
           <div class="carousel-item">
-              <img src="images/MonsterBurguer.png" height="500px" class="carouselImage" alt="...">
+              <img src="images/birraBar.png" height="500px" class="carouselImage" alt="...">
           </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
