Nuevas características y optimización.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#0">Menu</a>
             <ol class="sub-menu">
                 <li class="menu-item"><a href="pages/menu.html">Hamburguesas</a></li>
-                <li class="menu-item"><a href="pages/menuBebidas.html">Bebidas</a></li>
+                <li class="menu-item"><a href="pages/menuEnsaladas.html">Ensaladas</a></li>
                 <li class="menu-item"><a href="pages/menuAlcohol.html">Alcohol</a></li>
             </ol>
                 </li>
@@ -57,7 +57,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            
           </div>
           <div class="carousel-inner">
           <div class="carousel-item active">
@@ -68,9 +68,6 @@
           </div>
           <div class="carousel-item">
               <img src="images/hamburguesaNos.png" height="500px" class="carouselImage" alt="...">
-          </div>
-          <div class="carousel-item">
-              <img src="images/birraBar.png" height="500px" class="carouselImage" alt="...">
           </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
