--- a/pages/404.html
+++ b/pages/404.html
@@ -17,7 +17,7 @@
     </header>
     
     <div class="contenedorError">
-        <img src="../images/404.jpg" alt="" class="imgError">
+        <img src="../images/404.png" alt="" class="imgError">
         <h1 class="h1Error">La página que busca no existe.</h1>
         <div class="botonError">
             <button class="inicioError"><a href="../index.html">Volver al Inicio</a></button>
