--- a/pages/menuAlcohol.html
+++ b/pages/menuAlcohol.html
@@ -23,7 +23,7 @@
                 <a href="#0">Menu</a>
                 <ol class="sub-menu">
                   <li class="menu-item"><a href="menu.html">Hamburguesas</a></li>
-                  <li class="menu-item"><a href="menuBebidas.html">Bebidas</a></li>
+                  <li class="menu-item"><a href="menuEnsaladas.html">Ensaladas</a></li>
                   <li class="menu-item"><a href="menuAlcohol.html">Alcohol</a></li>
                 </ol>
               </li>
@@ -52,24 +52,24 @@
                 <div class="baconCheese">
 
                 <figure>
-                        <img src="../images/Cheese.png" alt="Red Hot Chili Burguer">
+                        <img src="../images/daiquiri.png" alt="Red Hot Chili Burguer">
                         <div class="descriptionBurguer">
-                        <h3>Hamburguesa de Cheddar</h3>
-                        <p class="burguerText">Tres medallones de carne de 120gr, Cheddar especial en cada piso de carne.</p>
+                        <h3>Daiquiri</h3>
+                        <p class="burguerText">Hecho con frutillas, azúcar, jugo de limón, ron blanco y hielo.</p>
                         </div>
                 </figure>  
                 <figure>
-                        <img src="../images/BaconCheese.png" alt="Red Hot Chili Burguer">
+                        <img src="../images/destornillador.png" alt="Red Hot Chili Burguer">
                         <div class="descriptionBurguer">
-                        <h3>Hamburguesa de Cheddar y Bacon</h3>
-                        <p class="burguerText">Un medallón de carne de 160gr, Cheddar, Panceta, Lechuga y tomate.</p>
+                        <h3>Destornillador</h3>
+                        <p class="burguerText">Hecho con vodka, jugo de naranja y 1 rodaja de naranja.</p>
                         </div>
                 </figure> 
                 <figure>
-                        <img src="../images/Spicy.png" alt="Red Hot Chili Burguer"> 
+                        <img src="../images/margarita.png" alt="Red Hot Chili Burguer"> 
                         <div class="descriptionBurguer">
-                        <h3>Hamburguesa Picante</h3>
-                        <p>Un medallón de carne de 120gr, Cheddar, Panceta, Salsa picante y papas pay.</p>
+                        <h3>Margarita</h3>
+                        <p>Hecho con tequila, licor de naranja, zumo de lima, sal y hielo.</p>
                         </div>
                 </figure>
                 </div>
@@ -81,27 +81,26 @@
                 <div class="baconCheese">
 
                 <figure>
-                        <img src="../images/VeganBurguer.png" alt="Red Hot Chili Burguer">
+                        <img src="../images/mojito.png" alt="Red Hot Chili Burguer">
                         <div class="descriptionBurguer">
-                        <h3>Hamburguesa de Hongos <br>
-                        (opción vegana)</h3>
-                        <p>Dos medallones de hongos, Cebolla morada y pepino.</p>
+                        <h3>Mojito</h3>
+                        <p>Hecho con azúcar, hojas de hierbabuena, zumo de lima, ron cubano, rodaja de lima, soda, hielos.</p>
                         </div>
 
                 </figure>
                 <figure>
-                        <img src="../images/WhiskyBurguer.png"  alt="Red Hot Chili Burguer">
+                        <img src="../images/whiscola.png"  alt="Red Hot Chili Burguer">
                         <div class="descriptionBurguer">
-                        <h3>Jack Daniels Burguer</h3>
-                        <p>Pan especial de papa PREMIUM, Medallón de carne de 140gr, Panceta, Cheddar, cebolla caramelizada y salsa Jack Daniels especial.</p>
+                        <h3>Whiscola</h3>
+                        <p>Hecho con Jack Daniels, Coca Cola y hielos.</p>
                         </div>
                 </figure>
                 <figure>
-                        <img src="../images/MonsterBurguer.png" alt="Red Hot Chili Burguer">
+                        <img src="../images/piñaColada.png" alt="Red Hot Chili Burguer">
 
                         <div class="descriptionBurguer">
-                        <h3>La tapa arterias</h3>
-                        <p>Cinco medallones de carne de 120gr, Cheddar en cada piso, Panceta en cada piso, Huevo por encima.</p>
+                        <h3>Piña Colada</h3>
+                        <p>Hecho con ron blanco, zumo de piña, leche de coco, rodaja de piña y hielos.</p>
                         </div>
                 </figure>
 
@@ -125,7 +124,7 @@
     
 </main>
         <footer class="rightsReserved">
-            All rights reserved © 2021
+            Todos los derechos reservados © 2021
         </footer>
 </body>
 </html>
