--- a/pages/menu.html
+++ b/pages/menu.html
@@ -23,7 +23,7 @@
                 <a href="#0">Menu</a>
                 <ol class="sub-menu">
                   <li class="menu-item"><a href="menu.html">Hamburguesas</a></li>
-                  <li class="menu-item"><a href="menuBebidas.html">Bebidas</a></li>
+                  <li class="menu-item"><a href="menuEnsaladas.html">Ensaladas</a></li>
                   <li class="menu-item"><a href="menuAlcohol.html">Alcohol</a></li>
                 </ol>
               </li>
@@ -125,7 +125,7 @@
     
 </main>
         <footer class="rightsReserved">
-            All rights reserved © 2021
+            Todos los derechos reservados © 2021
         </footer>
 </body>
 </html>
