--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,7 +22,7 @@
                 <a href="#0">Menu</a>
                 <ol class="sub-menu">
                     <li class="menu-item"><a href="menu.html">Hamburguesas</a></li>
-                    <li class="menu-item"><a href="menuBebidas.html">Bebidas</a></li>
+                    <li class="menu-item"><a href="menuEnsaladas.html">Ensaladas</a></li>
                     <li class="menu-item"><a href="menuAlcohol.html">Alcohol</a></li>
                   </ol>
               </li>
@@ -54,7 +54,6 @@
                 <div class="descriptionBurguer"><h3>FICO BAR</h3> 
                 <p>Somos un grupo de amigos que arrancamos con un amor incondicional por las hamburguesas caseras. <br>
                 Nos encanta dia a dia experimentar con nuevos inventos que se nos ocurren para poder compartir las mejores hamburguesas con ustedes. <br>
-                Nos encontramos en Olivos en Av. Maipú 2931. ¡VENÍ A CONOCERNOS! <br> <br>
                 TODOS LOS DIAS A PARTIR DE LAS 21HS</p></div>
 
                 </figure>
@@ -81,7 +80,7 @@
 
         </main>
         <footer class="rightsReserved">
-            All rights reserved © 2021 
+            Todos los derechos reservados © 2021 
         </footer>
 </body>
 </html>
