--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
             <a title="ficobar" href="index.html"><img src="../images/logofico3.png" alt="ficobar"  class="logoPagina"/><a></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Inicio</a>
+                    <a href="index.html" class="nav-link">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Hamburguesas</a>
+                    <a href="pages/menu.html" class="nav-link">Hamburguesas</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Ensaladas</a>
+                    <a href="pages/menuEnsaladas.html" class="nav-link">Ensaladas</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Alcohol</a>
+                    <a href="pages/menuAlcohol.html" class="nav-link">Alcohol</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Nosotros</a>
+                    <a href="pages/nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contacto</a>
+                    <a href="pages/contacto.html" class="nav-link">Contacto</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -50,12 +50,6 @@
     </header>
     <main>
 
-            <!-- ↓↓↓ Botones redes sociales ↓↓↓ -->
-        <div class="socialBar">
-            <a href="https://facebook.com" class="icon icon-facebook" target="_blank"></a>
-            <a href="https://twitter.com" class="icon icon-twitter" target="_blank"></a>
-            <a href="https://instagram.com" class="icon icon-instagram" target="_blank"></a>
-        </div>
 
 
         <section class="burguersIndex">
