--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
 
         <nav class="navbar">
-            <a title="ficobar" href="index.html"><img src="../images/logofico3.png" alt="ficobar"  class="logoPagina"/><a></a>
+            <a title="ficobar" href="index.html"><img src="images/logofico3.png" alt="ficobar"  class="logoPagina"/><a></a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Inicio</a>
