--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" href="images/logofico.ico" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
-    <!-- ↓↓↓↓ FONT FOR MENU AND SUBTITLE ↓↓↓↓ -->
+    <!-- ↓↓↓↓ Fuente de letra ↓↓↓↓ -->
     <link href="https://fonts.googleapis.com/css2?family=Glory&display=swap" rel="stylesheet">
-    <!-- ↓↓↓↓ LINK FOR CAROUSEL ↓↓↓↓ -->
+    <!-- ↓↓↓↓ Link Carousel ↓↓↓↓ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -68,13 +68,13 @@
         </div>
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="images/menuNos.png" height="500px" class="carouselImage" alt="...">
+            <img src="images/menuNos.png"  class="carouselImage" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="images/labirraNos.png" height="500px" class="carouselImage" alt="...">
+            <img src="images/labirraNos.png"  class="carouselImage" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="images/hamburguesaNos.png" height="500px" class="carouselImage" alt="...">
+            <img src="images/hamburguesaNos.png"  class="carouselImage" alt="...">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -106,7 +106,9 @@
 
     </main>
         <footer class="rightsReserved">
-            Todos los derechos reservados © 2021
+            Todos los derechos reservados © 2021 |
+
+            <a href="pages/404.html" class="ficoBar">Fico Bar</a>
         </footer>
 
         <!------------------------------------------------------------------------------------------------>
@@ -114,6 +116,7 @@
         <!-- ↓↓↓ Link JS carousel ↓↓↓ -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
+        <!--↓↓↓ Script menu mobile ↓↓↓-->
         <script src="js/main.js"></script>
 
         <!------------------------------------------------------------------------------------------------>
