--- a/pages/menu.html
+++ b/pages/menu.html
@@ -116,6 +116,8 @@
 
 
     </section>
+
+
     <!-- ↓↓↓ Información adicional ↓↓↓ -->
     <section class="informacionAdicional">
         <div class="telefonoLugar">
@@ -131,10 +133,15 @@
 
     
 </main>
+        
         <footer class="rightsReserved">
-            Todos los derechos reservados © 2021
+            Todos los derechos reservados © 2021 |
+
+            <a href="404.html" class="ficoBar">Fico Bar</a>
         </footer>
 
+
+        <!--↓↓↓ Script menu mobile ↓↓↓-->
         <script src="../js/main.js"></script>
 </body>
 </html>
