--- a/pages/menuAlcohol.html
+++ b/pages/menuAlcohol.html
@@ -129,10 +129,13 @@
 
     
 </main>
-        <footer class="rightsReserved">
-            Todos los derechos reservados © 2021
-        </footer>
+    <footer class="rightsReserved">
+        Todos los derechos reservados © 2021 |
 
+        <a href="404.html" class="ficoBar">Fico Bar</a>
+    </footer>
+
+        <!--↓↓↓ Script menu mobile ↓↓↓-->
         <script src="../js/main.js"></script>
 </body>
 </html>
