--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -88,9 +88,12 @@
 
         </main>
         <footer class="rightsReserved">
-            Todos los derechos reservados © 2021 
+            Todos los derechos reservados © 2021 |
+
+            <a href="404.html" class="ficoBar">Fico Bar</a>
         </footer>
 
+        <!--↓↓↓ Script menu mobile ↓↓↓-->
         <script src="../js/main.js"></script>
 </body>
 </html>
