--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,6 @@
     <title>Sobre Nosotros</title>
     <link rel="shortcut icon" href="../images/logofico.ico" />
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/font.css">
     <link href="https://fonts.googleapis.com/css2?family=Glory&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -61,8 +60,8 @@
                 <figure><img src="../images/bar.png" alt="Hamburguesa_2x1"  class="imagenBar">
                 <div class="descriptionBurguer"><h3>FICO BAR</h3> 
                 <p>Somos un grupo de amigos que arrancamos con un amor incondicional por las hamburguesas caseras. <br>
-                Nos encanta dia a dia experimentar con nuevos inventos que se nos ocurren para poder compartir las mejores hamburguesas con ustedes. <br>
-                TODOS LOS DIAS A PARTIR DE LAS 21HS</p></div>
+                Nos encanta día a día experimentar con nuevos inventos que se nos ocurren para poder compartir las mejores hamburguesas con ustedes. <br>
+                TODOS LOS DÍAS A PARTIR DE LAS 21HS</p></div>
 
                 </figure>
             
