--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Fico | Bar</title>
     <link rel="shortcut icon" href="images/logofico.ico" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font.css">
     <!-- ↓↓↓↓ Fuente de letra ↓↓↓↓ -->
     <link href="https://fonts.googleapis.com/css2?family=Glory&display=swap" rel="stylesheet">
     <!-- ↓↓↓↓ Link Carousel ↓↓↓↓ -->
@@ -68,22 +67,22 @@
         </div>
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="images/menuNos.png"  class="carouselImage" alt="...">
+            <img src="images/menuNos.png"  class="carouselImage" alt="menuNosotros">
         </div>
         <div class="carousel-item">
-            <img src="images/labirraNos.png"  class="carouselImage" alt="...">
+            <img src="images/labirraNos.png"  class="carouselImage" alt="barFuera">
         </div>
         <div class="carousel-item">
-            <img src="images/hamburguesaNos.png"  class="carouselImage" alt="...">
+            <img src="images/hamburguesaNos.png"  class="carouselImage" alt="bebidas">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden"></span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden"></span>
         </button>
         </div>
         <!------------------------------------------------------------------------------------------------>
